# MIPS-mock-assembler

./: CMakeLists.txt  README.md  assembler.c  assembler.h
.github/workflows/: cmake.yml
src/: CMakeLists.txt  assembler.c  assembler.h  consts.c  consts.h  directive.c  directive.h  externalTable.c  externalTable.h  guidanceList.c  helper.c  helper.h  instructionList.c  instructionList.h  line.c  line.h  main.c  makefile  statusCodes.h  symbolTable.c  symbolTable.h
tests/: CMakeLists.txt  fmemopen_windows.c  test.cpp  utility.cpp  utility.h
tests/assembly_files_test_cases/: ps.as  true_ps.ent  true_ps.ob
tests/assembly_files_test_cases/empty/: empty.as
tests/assembly_files_test_cases/only_code/: only_code.as  only_code.ob  true_only_code.ext  true_only_code.ob
tests/assembly_files_test_cases/only_data/: only_data.as  true_only_data.ent  true_only_data.ob
tests/assembly_files_test_cases/ps/: ps.ent  ps.ext
